# llm-mediator-simulation

./: .env.example  .gitignore  GUIDE.md  LICENSE.txt  README.md  WARNING.md  pyproject.toml  requirements.txt
annotation-app/: Dockerfile  README.md  annotations.json  app.py
annotation-app/annotations/: annotation_progress.json  annotations.json
annotation-app/annotations/a_at_hotmail_dot_fr/: annotations.json
annotation-app/annotations/as_at_ss_dot_ss/: annotations.json
annotation-app/annotations/b_at_b_dot_v/: annotations.json
annotation-app/annotations/b_at_q_dot_w/: annotations.json
annotation-app/annotations/d_at_hotmail_dot_fr/: annotations.json
annotation-app/annotations/f_at_f_dot_f/: annotations.json
annotation-app/annotations/g_at_g_dot_g/: annotations.json
annotation-app/annotations/h_at_h_dot_h/: annotations.json
annotation-app/annotations/q_at_w_dot_q/: annotations.json
annotation-app/annotations/z_at_w_dot_g/: annotations.json
annotation-app/annotations/z_at_z_dot_z/: annotations.json
annotation-app/data/reddit/cmv/: statements.json
app/: home.py  openai_key_manager.py  utils.py
app/components/: agents_profiles.py  settings.py  settings_page.py  simulator.py
data/: cognitive-bias-tree.csv  fallacies.json
data/reddit/cmv/: cga_cmv_pairs_before_derailment.jsonl  few_shot_samples.jsonl  sub_3xniq8-comment_cy66590.csv  sub_40h94q-comment_cyu412k.csv  sub_474nq2-comment_d0a8pxx.csv  sub_4bgdek-comment_d18y3u4.csv  sub_4qfprz-comment_d4sk8oz.csv  sub_4vup0o-comment_d61jc24.csv  sub_4yyfnf-comment_d6rdl3b.csv  sub_563ghn-comment_d8g5t21.csv  sub_5age1s-comment_d9g8q6e.csv  sub_5ca0nr-comment_d9utau4.csv  sub_5la16w-comment_dbu2fe2.csv  sub_5ncess-comment_dcahb81.csv  sub_5seyec-comment_ddf6qqq.csv  sub_6312id-comment_dfqk9y9.csv  sub_65nrn7-comment_dgbs1fs.csv  sub_6caqt8-comment_dhtfc70.csv  sub_6mschw-comment_dk3zgn5.csv  sub_7bvoy4-comment_dpl4bjt.csv  sub_7qlk4m-comment_dsq204o.csv  sub_7vh3h7-comment_dtskr56.csv  sub_7z6ia0-comment_duloetg.csv  sub_80a8r6-comment_duuavfa.csv  sub_87g6a4-comment_dwcnhia.csv  sub_8kccrl-comment_dz6i9o8.csv  sub_8p9xlo-comment_e09jpyp.csv  sub_8t9wzt-comment_e160nkb.csv  sub_9cgibn-comment_e5ak20u.csv  sub_9ibjbk-comment_e6if8p9.csv  user_ids.json
data/reddit/cmv/dclm_contamination/: cmv_reddit_urls.json  cmv_reddit_users_urls.json
data/reddit/cmv/dev/: sub_468cnb-comment_d03pp1k.csv  sub_4yyfnf-comment_d6rdbyk.csv  sub_65hkar-comment_dgac88b.csv  sub_6l9pjc-comment_djs5ngq.csv
data/reddit/cmv/test/: sub_3jyxn7-comment_cuteyi2.csv  sub_3ko9vd-comment_cuz35v2.csv  sub_3lqidx-comment_cv8gsnh.csv  sub_3mhgci-comment_cveysuq.csv  sub_3myz7j-comment_cvjc70m.csv  sub_3nkn9v-comment_cvp1p2c.csv  sub_3oz6yk-comment_cw1r1b3.csv  sub_3q2zo7-comment_cwbmwc2.csv  sub_3qn3kr-comment_cwgnz8y.csv  sub_3t8r5f-comment_cx42yke.csv  sub_3u7nh1-comment_cxckrqk.csv  sub_3xp8j6-comment_cy6pprk.csv  sub_40kj5x-comment_cyuz6qp.csv  sub_41l4ad-comment_cz3c0zg.csv  sub_42p4sh-comment_czc25m2.csv  sub_45adoi-comment_czwe3sk.csv  sub_466efe-comment_d02tnnh.csv  sub_4afq11-comment_d0zzffv.csv  sub_4fp4xu-comment_d2axxer.csv  sub_4lq5n0-comment_d3p980i.csv  sub_4p1szf-comment_d4hcw9x.csv  sub_4sln39-comment_d5aapqy.csv  sub_4u58qz-comment_d5myq9i.csv  sub_4udjom-comment_d5oudqr.csv  sub_4ur7x8-comment_d5s45ho.csv  sub_4z1qpi-comment_d6s4rql.csv  sub_50r83k-comment_d76clq2.csv  (+82 more)
docs/: OVERVIEW.md
examples/: example_analysis.py  example_async.py  example_debate.py  example_debate_2.py  example_mistral.py  example_pickle.py  example_server.py
fine_tuning/: .dockerignore  Dockerfile  README.md  pyproject.toml  train_olmo_reddit.py
fine_tuning/configs/: config.yaml
fine_tuning/configs/lora/: default.yaml
llm_mediator_simulations/metrics/: criteria.py  metrics_handler.py  perspective_api.py
llm_mediator_simulations/models/: google_models.py  mistral_models.py
llm_mediator_simulations/simulation/: configuration.py  debate.py  prompt.py  summary.py  summary_handler.py
llm_mediator_simulations/utils/: decorators.py  json.py  model_utils.py  types.py
metrics/: perspective_api.py
notebooks/: analysis_cmv_cga_extracted_convs.ipynb  analysis_generated_profiles.ipynb  download_dclm-baseline.ipynb  manually_extract_fewshot_samples.ipynb
scripts/: debate_ollama_from_reddit_csv.py  default_debate.py  default_debate_ollama.py  default_debate_ollama_async.py  default_debate_server.py  default_debaters.py  hf_server.py
scripts/configs/: reddit_cmv.yaml
scripts/configs/debate_config/: DebateConfig1.yaml
scripts/configs/summary_config/: SummaryConfig1.yaml
scripts/dclm_dataset/: cmv_dclm_contamination_check.py  download_dclm-baseline.py
scripts/reddit_dataset/: create_dev_test_split_in_cga_cmv_dataset.py  create_reddit_dataset.py  create_reddit_dataset_v1.py  create_reddit_training_dataset.py  create_reddit_user_profiles.py
src/llm_mediator_simulation/: __about__.py
src/llm_mediator_simulation/metrics/: async_metrics_handler.py  criteria.py  distinct_repetition_bertScore.py  metrics_handler.py
src/llm_mediator_simulation/models/: dummy_model.py  google_models.py  gpt_models.py  hf_local_model.py  hf_local_server_model.py  language_model.py  mistral_local_model.py  mistral_local_server_model.py  mistral_models.py  ollama_local_server_model.py
src/llm_mediator_simulation/personalities/: characteristics.py  cognitive_biases.py  demographics.py  facets.py  fallacies.py  human_values.py  ideologies.py  moral_foundations.py  personality.py  scales.py  traits.py
src/llm_mediator_simulation/simulation/: async_debate.py  configuration.py  debate.py  prompt.py  summary_handler.py
src/llm_mediator_simulation/utils/: analysis.py  debaters.py  decorators.py  fallacies.json  interfaces.py  json.py  load_csv.py  maths.py  model_utils.py  plotting.py  probabilities.py  prompt_utils.py  reproducibility.py  summary_prompt.py  types.py
src/llm_mediator_simulation/visualization/: graphs.py  transcript.py
tests/: __init__.py  test_cognitive_bias_loader.py  test_fallacy_loader.py  test_personality.py
(+53 files in other folders)
