[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "olmo_reddit_finetuning"
version = "0.1.0"
description = "Fine-tuning OLMo-2 on Reddit ChangeMyView data"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.38.0",
    "datasets>=2.16.0",
    "peft>=0.8.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.42.0",
    "wandb>=0.16.0",
    "tqdm>=4.66.0",
    "jsonlines>=4.0.0",
    "python-dotenv",
    "hydra-core",
    "trl",
]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"
python = "3.12"

[tool.hatch.build.targets.wheel]
packages = ["."] 